third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/from_str/struct_invalid_casing.rs
#[derive(derive_more::FromStr)]
#[from_str(rename_all = "Whatever")]
struct Foo;

fn main() {}
